# AnKLuMe

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  LLM_ONBOARDING.md  Makefile  README.md  README_FR.md  ansible.cfg  behave.ini  infra.yml  infra.yml.example  mkdocs.yml  pretty.output  pyproject.toml  requirements.yml  site.yml  snapshot.yml
.claude/: settings.json
.claude/agents/: architect.md  local-coder.md  reviewer.md
.claude/plans/: lexical-enchanting-parasol.md
.github/workflows/: ci.yml  docs.yml  release-iso.yml  security.yml
docs/: ARCHITECTURE.fr.md  ARCHITECTURE.md  ARCHITECTURE_FR.md  ROADMAP.fr.md  ROADMAP.md  ROADMAP_FR.md  SPEC-operations.fr.md  SPEC-operations.md  SPEC-operations_FR.md  SPEC.fr.md  SPEC.md  SPEC_FR.md  addressing-convention.md  addressing-convention_FR.md  agent-teams.md  agent-teams_FR.md  ai-switch.fr.md  ai-switch.md  ai-switch_FR.md  ai-testing.md  ai-testing_FR.md  claude-code-workflow.md  claude-code-workflow_FR.md  code-analysis.md  code-analysis_FR.md  console.fr.md  console.md  console_FR.md  cups-setup.fr.md  cups-setup.md  cups-setup_FR.md  decisions-log.md  decisions-log_FR.md  desktop-integration.fr.md  desktop-integration.md  desktop-integration_FR.md  disposable.md  disposable_FR.md  file-transfer.fr.md  file-transfer.md  (+70 more)
docs/cli/: index.md
docs/concepts/: domaines.md  index.md  nesting.md  psot.md  reseau.md  resources.md  trust-levels.md
docs/developpement/: contribuer.md  dev-env.md  index.md  tests.md
docs/guide/: host-setup.md  index.md  installation.md  project-structure.md  quickstart.md  tui.md
docs/ia/: gpu.md  index.md  routage-llm.md  stt.md
docs/incidents/: 2026-02-15-network-loss.md
docs/operations/: doctor.md  golden-images.md  index.md  portails.md  snapshots.md  tor.md
docs/reference/: api.md
examples/: README.md
examples/ai-tools/: README.md  infra.yml
examples/developer/: README.md  infra.yml
examples/live-os/: infra.yml
examples/llm-supervisor/: README.md  infra.yml
examples/pro-workstation/: README.md  infra.yml
examples/sandbox-aware-prompt/: CLAUDE.md
examples/sandbox-isolation/: README.md  infra.yml
examples/shared-services/: README.md  infra.yml
examples/showcase/: .gitignore  anklume.yml  policies.yml  requirements.yml
examples/student-sysadmin/: README.md  infra.yml
examples/sys-print/: README.md  infra.yml
examples/teacher-lab/: README.md  infra.yml
examples/tor-gateway/: README.md  infra.yml
experiences/: README.md
experiences/decisions/: architecture.yml
experiences/fixes/: ansible-lint.yml  generator.yml  incus-cli.yml  molecule.yml
experiences/patterns/: reconciliation.yml  role-structure.yml  testing.yml
group_vars/: admin.yml  all.yml  work.yml
host/: bootstrap-cachyos.sh  bootstrap-host.sh  bootstrap.sh  factory-reset.sh  quickstart.sh
host/boot/: network-recovery.sh  setup-boot-services.sh  sync-claude-credentials.sh
host/desktop/: domain-menu.sh  export-desktops.sh
host/faime/: README.md  build-iso.sh  postinst.sh
host/lib/: common.sh  nvidia.sh
host/stt/: azerty-type.py  push-to-talk.sh  streaming.py  stt-azerty-type.py  stt-push-to-talk.sh  stt-streaming.py
host_vars/: admin-ansible.yml  dev-workspace.yml
i18n/: fr.yml
images/: .gitignore
inventory/: admin.yml  work.yml
labs/: README.md  lab-schema.yml
labs/01-first-deploy/: infra.yml  lab.yml
playbooks/: site.yml
scenarios/: _gates.feature  conftest.py  environment.py  pitfalls.yml  support.py
scripts/: 00-prerequisites-debian13.sh  01-bootstrap-incus.sh  accessibility.py  agent-develop.sh  agent-fix.sh  ai-config.sh  ai-develop.sh  ai-improve.sh  ai-matrix-test.sh  ai-switch.sh  ai-test-loop.sh  bootstrap.sh  build-image.sh  claude-host-guard.sh  claude-host.sh  clipboard.sh  code-analysis.sh  code-audit.py  colors.py  console.py  console.sh  coverage-ratchet.sh  create-data-dirs.py  create-shares.py  cups-setup.sh  dashboard.py  deploy-nftables.sh  desktop-plugin.sh  desktop_config.py  disp.sh  doctor-checks.sh  doctor-network.sh  doctor.sh  domain-exec.sh  domain-lib.sh  e2e-test-iso.py  export-app.sh  file-portal.sh  first-boot.sh  flush.sh  (+67 more)
tests/: behavior_matrix.yml  behavioral_chains.yml  conftest.py  incus_helpers.py  test_accessibility.py  test_addressing.py  test_ai.py  test_ai_dev.py  test_ai_scripts.py  test_ai_switch.py  test_bootstrap.py  test_cli.py  test_cli_deps.py  test_cli_dev_nesting.py  test_cli_instance_list.py  test_cli_learn.py  test_cli_mode_accessibility.py  test_cli_phase17.py  test_cli_phase18.py  test_cli_phase19.py  test_cli_stt.py  test_cli_system.py  test_cli_tree.py  test_cli_tree_coverage.py  test_clipboard.py  test_code_analysis.py  test_code_audit.py  test_code_sandbox.py  test_completion.py  test_consistency.py  test_console.py  test_cups_setup.py  test_deploy_nftables.py  test_desktop.py  test_desktop_plugin.py  test_destroy.py  test_dev_env.py  test_dev_setup.py  test_disp.py  test_disposable.py  (+103 more)
(+608 files in other folders)
