[project]
name = "anklume"
version = "0.1.0-dev"
description = "Framework déclaratif de compartimentalisation d'infrastructure"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Jean-Michel Chantrein", email = "jean-mathieu.chantrein@univ-angers.fr" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "behave>=1.2",
    "ruff>=0.8",
]
live = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
anklume = "anklume.cli:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "live/platform"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests lents (nesting, GPU)",
    "gpu: tests nécessitant un GPU NVIDIA",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anklume"]
