[project]
name = "anklume"
dynamic = ["version"]
description = "Framework déclaratif de compartimentalisation d'infrastructure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jean-Michel Chantrein", email = "jean-mathieu.chantrein@univ-angers.fr" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tui = ["textual>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "behave>=1.2",
    "ruff>=0.8",
    "pyright>=1.1",
    "molecule>=24.0",
    "ansible-core>=2.16",
    "mkdocstrings[python]>=1.0.3",
]
[project.scripts]
anklume = "anklume.cli:app"
ank = "anklume.cli:app"

# Plugins CLI externes — un package séparé peut enregistrer un Typer sub-app :
# [project.entry-points."anklume.commands"]
# myplugin = "anklume_myplugin.cli:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = ["src/anklume/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "RUF", "C4", "SIM", "PIE"]
ignore = ["S603", "S607", "SIM401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "SIM117"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.coverage.run]
source = ["src/anklume"]
omit = ["src/anklume/_version.py"]

[tool.coverage.report]
show_missing = true
# fail_under géré par scripts/coverage-ratchet.sh (ratcheting progressif)
# Le seuil courant est dans .coverage-threshold

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests lents (nesting, GPU)",
    "gpu: tests nécessitant un GPU NVIDIA",
    "real: tests réels E2E dans VM KVM (anklume dev test-real)",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/anklume/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anklume"]
